Major Update - Added Resume

--- a/hackathon.html
+++ b/hackathon.html
@@ -68,7 +68,6 @@
         <h1 class="text-light"><a href="index.html">Punit Kunjam</a></h1>
         <div class="social-links mt-3 text-center">
           <!--TODO: ADD LINK FOR CV-->
-          <a href="https://drive.google.com/file/d/1MvWVg-WQd31cbJyQLUiMQnrO49VxI_ut/view?usp=sharing" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
           <a href="https://www.linkedin.com/in/pkunjam/" class="" target="_blank"><i class="bi bi-linkedin"
               title="Linkedin"></i></a>
           <a href="https://github.com/pkunjam" class="" target="_blank"><i class="bi bi-github" title="GitHub"></i></a>
@@ -79,14 +78,16 @@
   
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a>
+          <li><a href="https://drive.google.com/file/d/1Qg6lt1iTU_d3K1fpMmtJcjSpfZxKr5nS/view?usp=sharing" target="_blank"
+              class="nav-link scrollto"><i class="bi bi-star-fill" style="color: yellow;"></i> <span>Resume</span></a></li>
+          <li><a href="index.html#hero" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           </li>
-          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <!-- <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li> -->
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bi bi-book"></i><span>Education</span></a>
           </li>
           <li><a href="index.html#experience" class="nav-link scrollto"><i class="bi bi-briefcase"></i>
               <span>Experience</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bi bi-folder"></i>
+          <li><a href="index.html#portfolio" class="nav-link scrollto active"><i class="bi bi-folder"></i>
               <span>Projects</span></a></li>
           <!-- <li><a href="index.html#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a>
           </li> -->
