--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
                               <b>Coursework -</b>
                               <li>Human-Computer Interaction</li>
                               <li>Advance Topics in Computer Graphics (Rendering)</li>
-                              <li>Introduction to Haptic Information Design</li>
-                              <li>Introduction to Haptic Information Design</li>
+                              <li>Haptic Computing</li>
+                              <li>Advanced Topics in Software Engineering (Software Analytics for Release Pipelines)</li>
                           </p>
                       </div>
                       <div class="resume-item">
