--- a/pockets.html
+++ b/pockets.html
@@ -164,7 +164,7 @@
               <div class="swiper-pagination"></div>
 
               <iframe width="620" height="360" src="https://www.youtube.com/embed/9Gpo5SsGH28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-                <br><br> <strong style="text-align:center; font-size: medium;">Pockets Initial Portotype Demo (Access the DOI to watch the latest demo)</strong>
+                <br><br> <strong style="text-align:center; font-size: medium;">Pockets Initial Prototype Demo (Access the DOI to watch the latest demo)</strong>
             </div>
 
           
