--- a/slingshot.html
+++ b/slingshot.html
@@ -104,7 +104,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Slinghsot</li>
+            <li>Slingshot</li>
           </ol>
         </div>
 
