--- a/slingshot.html
+++ b/slingshot.html
@@ -116,7 +116,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6">
-            <h2>Slinghsot</h2>
+            <h2>Slingshot</h2>
               <div class="portfolio-info">
                 <ul>
                   <li><strong>Contributors:</strong>  Punit Kunjam, Anchit Mishra, Ken Jen Lee, and Maxwell Gentili-Morin</li>
