--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="hero-container col-md-6" data-aos="fade-in">
         
         <p style="text-align: right;">
-            <span_1><i class="bi-file-earmark-text"></i></span_1> </i><a href="https://drive.google.com/file/d/1Qg6lt1iTU_d3K1fpMmtJcjSpfZxKr5nS/view?usp=sharing" target="_blank">Resume (Updated April 2024)</a> <br>Full CV upon request.
+            <span_1><i class="bi-file-earmark-text"></i></span_1> </i><a href="https://drive.google.com/file/d/1Qg6lt1iTU_d3K1fpMmtJcjSpfZxKr5nS/view?usp=sharing" target="_blank" style="background-color: yellow; color: black;">Resume (Updated April 2024)</a> <br>Full CV upon request.
         </p>
         
         <p>
@@ -696,7 +696,7 @@
                               <br>
                               <br>
 
-                              I worked Worked as a full-time Business Technology Analyst (Software Engineer) contributing towards the developement of a financial auditing tool.
+                              I worked as a full-time Business Technology Analyst (Software Engineer) contributing towards the development of a financial auditing tool.
 
                           </p>
 
