--- a/slingshot.html
+++ b/slingshot.html
@@ -73,19 +73,23 @@
         </div>
       </div>
   
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="https://drive.google.com/file/d/1Qg6lt1iTU_d3K1fpMmtJcjSpfZxKr5nS/view?usp=sharing" target="_blank"
-              class="nav-link scrollto"><i class="bi bi-star-fill" style="color: yellow;"></i> <span>Resume</span></a></li>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <!-- <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li> -->
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bi bi-folder"></i> <span>Projects</span></a></li>
-          <li><a href="#experience" class="nav-link scrollto"><i class="bi bi-briefcase"></i> <span>Experience</span></a></li>
-          <!-- <li><a href="#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a></li> -->
-          <li><a href="#resume" class="nav-link scrollto"><i class="bi bi-book"></i><span>Education</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
+    <nav id="navbar" class="nav-menu navbar">
+      <ul>
+        <li><a href="https://drive.google.com/file/d/1Qg6lt1iTU_d3K1fpMmtJcjSpfZxKr5nS/view?usp=sharing" target="_blank"
+            class="nav-link scrollto"><i class="bi bi-star-fill" style="color: yellow;"></i> <span>Resume</span></a></li>
+        <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>About</span></a>
+        </li>
+        <!-- <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li> -->
+        <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bi bi-folder"></i> <span>Projects</span></a>
+        </li>
+        <li><a href="index.html#experience" class="nav-link scrollto"><i class="bi bi-briefcase"></i>
+            <span>Experience</span></a></li>
+        <!-- <li><a href="#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a></li> -->
+        <li><a href="index.html#resume" class="nav-link scrollto"><i class="bi bi-book"></i><span>Education</span></a></li>
+        <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a>
+        </li>
+      </ul>
+    </nav><!-- .nav-menu -->
     </div>
   </header><!-- End Header -->
 
