--- a/ambf.html
+++ b/ambf.html
@@ -98,7 +98,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Asynchronous Multibody Framework Plus (AMBF+)</li>
+            <li>Virtual Reality for Synergistic Surgical Training and Data Generation</li>
           </ol>
         </div>
 
@@ -113,7 +113,7 @@
 
 
           <div class="col-lg-6">
-            <h2>Asynchronous Multibody Framework Plus (AMBF+)</h2>
+            <h2>Virtual Reality for Synergistic Surgical Training and Data Generation</h2>
             
 
             <div class="portfolio-info">
@@ -124,13 +124,13 @@
             </div>
             <div class="portfolio-description">
               <p style="text-align: justify;">
-                Asynchronous Multibody Framework Plus (AMBF+) is an open-sourced 
+                We developed a virtual drilling
+                simulator for lateral skull-base surgery to demonstrate a use-case of
+                Asynchronous Multibody Framework Plus (AMBF+). AMBF+ is an open-sourced 
                 simulation framework that simultaneously generates data for 
                 downstream algorithm development and allows users to practice their 
                 surgical skills. It can generate data viz. stereo RGB images, depth, 
-                segmentation maps, object pose, etc. We developed a virtual drilling 
-                simulator for lateral skull-base surgery to demonstrate a use-case of
-                AMBF+. It enables users to modify the patient anatomy actively using a 
+                segmentation maps, object pose, etc.  It enables users to modify the patient anatomy actively using a 
                 virtual surgical drill. AMBF+ integrates visual (stereoscopic display
                 on a virtual reality [VR] device) and haptic feedback that offers 
                 immersive surgical simulation.
@@ -151,7 +151,7 @@
                 for synergistic surgical training and data generation.” Computer Methods in 
                 Biomechanics and Biomedical Engineering: Imaging & Visualization (2021): 1-9. 
                 <b>Outstanding Paper Award</b> <br>
-                <a href="https://github.com/WPI-AIM/ambf" target="_blank">[GitHub]</a> &nbsp;
+                <a href="https://github.com/LCSR-SICKKIDS/volumetric_drilling" target="_blank">[GitHub]</a> &nbsp;
                 <a href="https://drive.google.com/file/d/1jUq5Wpt0CUFhtmW_N3lB-WPMoVVERZTq/view?usp=drive_link" target="_blank">[PDF]</a> &nbsp;
                 <a href="https://www.tandfonline.com/doi/full/10.1080/21681163.2021.1999331" target="_blank">[DOI]</a>
               </p>
