--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <br>
-                    <h6 style="text-align: center;">AMBF+ (Asynchronouos Multibody Framework Plus)</h6>
+                    <h6 style="text-align: center;">Virtual Reality for Synergistic Surgical Training and Data Generation</h6>
                 </div>
     
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -229,7 +229,8 @@
                         </div>
                     </div>
                     <br>
-                    <h6 style="text-align: center;">Pockets</h6>
+                    <h6 style="text-align: center;">Pockets: User-Assigned Menus Based on Physical Buttons for
+                    Virtual Environments</h6>
                 </div>
     
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
