--- a/ambf.html
+++ b/ambf.html
@@ -124,7 +124,7 @@
             </div>
             <div class="portfolio-description">
               <p style="text-align: justify;">
-                we developed a cost-effective and synergistic framework, called Asynchronous Multibody Framework Plus (AMBF+), to
+                We developed a cost-effective and synergistic framework, called Asynchronous Multibody Framework Plus (AMBF+), to
                 facilitate surgical training while simultaneously generating data for algorithm development. AMBF+ provides a virtual
                 reality (VR) environment with stereoscopic display and haptic feedback, enabling users to practice surgical skills. It
                 also allows the generation of diverse data, including object poses and segmentation maps, that are essential for
