--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="img/profile_pic.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Punit Kunjam</a></h1>
+        <a href="https://pkunjam.github.io/"><img src="img/profile_pic.jpg" alt="" class="img-fluid rounded-circle"></a>
+        <h1 class="text-light"><a href="https://pkunjam.github.io/">Punit Kunjam</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/pkunjam/" class="" target="_blank"><i class="bi bi-linkedin" title="Linkedin"></i></a>
           <a href="https://github.com/pkunjam" class="" target="_blank"><i class="bi bi-github" title="GitHub"></i></a>
