--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <br>
-                    <h6 style="text-align: center;">TerraGPT: LLM-Driven Procedural Terrain Generator</h6>
+                    <h6 style="text-align: center;">Confluent AI: LLM-Driven Procedural Terrain Generator</h6>
                 </div>
     
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
