--- a/terrain.html
+++ b/terrain.html
@@ -102,7 +102,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>TerraGPT: LLM-Driven Procedural Terrain Generator</li>
+            <li>Confluent AI: LLM-Driven Procedural Terrain Generator</li>
           </ol>
         </div>
 
@@ -117,7 +117,7 @@
 
 
           <div class="col-lg-6">
-            <h2>TerraGPT: LLM-Driven Procedural Terrain Generator</h2>
+            <h2>Confluent AI: LLM-Driven Procedural Terrain Generator</h2>
 
             <div class="portfolio-description">
               <p style="text-align: justify;">
