--- a/sankofa.html
+++ b/sankofa.html
@@ -167,8 +167,11 @@
               <h2 style="text-align: justify;">Publication</h2>
               <p><i>In revision for a planned submission to CHI 2025</i></p>
               
-              <p><b><i>[Code and PDF of the thesis will be provided upon request for review. The GitHub repository is currently private until
+              <p><b><i>[Code will be provided upon request for review. The GitHub repository is currently private until
                     published]</i></b></p>
+
+              <a href="https://uwspace.uwaterloo.ca/items/aa7e5530-41b1-457d-998c-8d7d7eef61db"
+                  target="_blank">[Thesis PDF]</a>
             </div>
           </div>
 
@@ -205,7 +208,7 @@
 
             </div>
               
-              <p style="text-align: center;"><b><i>[Demo video coming soon]</i></b></p>
+              <p style="text-align: center;"><b><i>[Demo video will be provided upon request due to the sensitive nature of the content in the VR experience]</i></b></p>
 
           </div>
 
