--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@
                           <div class="address">
                               <i class="bi bi-geo-alt"></i>
                               <h4>Location:</h4>
-                              <p>45 High Street, Waterloo, ON N2L 3X7</p>
+                              <p>Toronto, ON, Canada</p>
                           </div>
 
                           <div class="email">
